[metadata]
name = auto_whatsapp
version = 0.0.4
author = Adil
author_email = adilbacker11@gmail.com
description = Automating WhatsApp using python with custom multiple messaging options, attachment options and supporting images and video sending
long_description = file: README.md
long_description_content_type = text/markdown
keywords = automate, whatsapp, py-whatsapp, web_whatsapp, python_whatsapp
url = https://github.com/adil-01/auto-whatsapp
project_urls =
    Bug Tracker = https://github.com/adil-01/auto-whatsapp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

install_requires = selenium